Update and rename index1.html to index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                   </div>
               </div>
               <div id="clock-box">
-                  <a  target="_blank">聪宝宝</a> 与 <a  target="_blank">panwg</a> 在一起的
+                  <a  target="_blank">聪宝宝</a> 与 <a  href="panwg.me" 
+                                                   target="_blank">@panwg</a> 在一起的
                       <div id="clock"></div>
                   <br>
                   <a href="index.html" target="_blank">photo album</a>
