--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   </div>
               </div>
               <div id="clock-box">
-                  <a  target="_blank">聪宝宝</a> 与 <a  href="panwg.me" 
+                  <a  target="_blank">聪宝宝</a> 与 <a  href="https://www.panwg.me" 
                                                    target="_blank">@panwg</a> 在一起的
                       <div id="clock"></div>
                   <br>
