--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                   </div>
               </div>
               <div id="clock-box">
-                  <a  target="_blank">聪宝宝</a> 与 <a  href="https://www.panwg.me" 
+                  <a  target="_blank">聪宝宝</a> 与 <a  href="http://www.panwg.me" 
                                                    target="_blank">@panwg</a> 在一起的
                       <div id="clock"></div>
                   <br>
-                  <a href="index.html" target="_blank">photo album</a>
+                  <a href="index1.html" target="_blank">photo album</a>
               </div>
               <canvas id="canvas" width="1100" height="680" onclick="document.getElementById('music').play();return false;" ></canvas>
           </div>
