--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <span class="say">Coffee is lonely without cups. I am lonely without you.</span><br>
 
                  <br>
-                  <span class="say"><span class="space"></span> -- Yours, Albee.</span>
+                  <span class="say"><span class="space"></span> -- Yours, PWG.</span>
                   </div>
               </div>
               <div id="clock-box">
@@ -57,13 +57,9 @@
   </script>
 
   <script>
-      console.log('%c  小仙女Albee  VX：k2Romm  ', 'text-shadow: 3px 1px 1px grey;background-image:-webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );color:transparent;-webkit-background-clip: text;font-size:5em;');
-      console.log("%c 基友岗前培训后分配到特警支队，头一次执行任务是一次民工讨薪聚众围堵政府闹事。", "font-size:20pt");
-              console.log("%c 防暴特警出动，第一排盾牌，第二排警棍，第三排拿水枪。", "font-size:20pt");
-              console.log("%c 基友等新人在第四排负责喊话和摄像。 ", "font-size:20pt");
-              console.log("%c 开始喊话，领导让重点大学刚毕业的基友来喊，基友拿起喇叭开喊：“里面的人听着，你们已经被包围了！”", "font-size:20pt");
-              console.log("%c ......", "font-size:20pt");
-              console.log("%c 支队长立马飞起来一脚踹翻了喊话的基友，一把抢过喇叭喊：“你们要相信党，相信政府!”", "font-size:20pt");
+      console.log('%c  潘帅LOVE聪聪  么么哒', 'text-shadow: 3px 1px 1px grey;background-image:-webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );color:transparent;-webkit-background-clip: text;font-size:5em;');
+      console.log("%c  聪大宝", "font-size:20pt");
+            
       (function(){
       var canvas = $('#canvas');
 
